# the-amazing-library-test

./: CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: build.yml  publish.yml  release-please.yml
tests/: test_init.py
the_amazing_library/: __init__.py
