[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-amazing-library"
version = "6.1.0"
description = 'Such an amazing library. Wow. It does so many amazing things. Just amazing. Unbelievably so.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "coverage-enable-subprocess",
    "coverage[toml]",
    "pytest-mock",
    "pytest-randomly",
    "pytest-rerunfailures",
    "pytest-xdist[psutil]",
]

[project.urls]
Documentation = "https://github.com/danipran/the-amazing-library#readme"
Issues = "https://github.com/danipran/the-amazing-library/issues"
Source = "https://github.com/danipran/the-amazing-library"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:the_amazing_library tests}"

[tool.coverage.run]
source_pkgs = ["the_amazing_library", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
the_amazing_library = ["the_amazing_library", "*/the-amazing-library/the_amazing_library"]
tests = ["tests", "*/the-amazing-library/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
